k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-ingress
  namespace: capstone
  annotations:
    kubernetes.io/ingress.class: "gce" # GKE's built-in Ingress controller
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
